--- a/webpage/index.html
+++ b/webpage/index.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+  <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
+  <title>I.S.S. Volcano Alert</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="images/favicon.png">
+
 </head>
 <body>
-    <h1>deploy success</h1>
 
-    <h2></h2>
-    <h3></h3>
-    <div>
-        <span>volcano location</span>
-        <iframe id="add" 
-  width="1000" 
-  height="700" 
-  frameborder="0" 
-  scrolling="no" 
-  marginheight="0" 
-  marginwidth="0" 
-  src="https://maps.google.com/maps?q=0,0&hl=es&z=14&amp;output=embed"
- >
-        
- </iframe>
+  <!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="container">
+    <div class="firstBlock">
+      <h1 id="title">International Space Station Volcano Alert</h1>
+      <h5>When the I.S.S. passes directly overhead a volcano, an alert tweet is sent out to one of the astronauts on board.</h4>
+      <h5>Check out the projects repository <a href="#">here</a> (to see the code behind it) or check out the alert bot's twitter account <a href="#">here</a>.</h4>
     </div>
+    <div class="row secondBlock">
+      <div class="column">
+        <h4>Last volcano below the International Space Station:</h4>
+        <iframe id="mapIframe" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src='https://www.google.com/maps/embed/v1/view?key=AIzaSyDodhFFW3Wz6zw0c9TmzMMSdrsANKgBIEU&center=0,0&zoom=10&maptype=satellite'></iframe>
+        <button>click</button>
+      </div>
+    </div>
+  </div>
 
-    <script defer type="text/javascript" src="server.js"></script>
+<script type="text/javascript" src="main.js"></script>
+<!-- thank u mr skeltal -->
 </body>
 </html>
