--- a/webpage/index.html
+++ b/webpage/index.html
@@ -46,6 +46,7 @@
     </div>
   </div>
 
+<script type="text/javascript" src="secret.js"></script>
 <script type="text/javascript" src="main.js"></script>
 <!-- thank u mr skeltal -->
 </body>
