started building makeObject() which writes data to JSON

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -6,8 +6,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>I.S.S. Volcano Alert</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="A Fun Twitter Bot" content="">
+  <meta name="Cal Archer" content="">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -24,7 +24,8 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
+  <link rel="icon" href="img/favicon.png">
+
 
 </head>
 <body>
@@ -34,8 +35,10 @@
   <div class="container">
     <div class="firstBlock">
       <h1 id="title">International Space Station Volcano Alert</h1>
-      <h5>When the I.S.S. passes directly overhead a volcano, an alert tweet is sent out to one of the astronauts on board.</h4>
-      <h5>Check out the projects repository <a href="#">here</a> (to see the code behind it) or check out the alert bot's twitter account <a href="#">here</a>.</h4>
+      <h5>When the I.S.S. passes directly overhead a volcano, an alert tweet is sent out to one of the astronauts on board.</h5>
+      <p>Check out the projects repository <a href="#">here</a> (to see the code behind it) or check out the alert bot's twitter account <a href="#">here</a>. <i class="fa-brands fa-twitter"></i></p>
+
+    
     </div>
     <div class="row secondBlock">
       <div class="column">
@@ -46,6 +49,8 @@
     </div>
   </div>
 
+
+<script src="https://kit.fontawesome.com/bac08de2ab.js" crossorigin="anonymous"></script>
 <script type="text/javascript" src="secret.js"></script>
 <script type="text/javascript" src="main.js"></script>
 <!-- thank u mr skeltal -->
