--- a/webpage/index.html
+++ b/webpage/index.html
@@ -2,58 +2,37 @@
 <html lang="en">
 <head>
 
-  <!-- Basic Page Needs
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+
   <meta charset="utf-8">
-  <title>I.S.S. Volcano Alert</title>
-  <meta name="A Fun Twitter Bot" content="">
-  <meta name="Cal Archer" content="">
+  <title>Your page title here :)</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-  <!-- Mobile Specific Metas
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" href="img/favicon.png">
-
 
 </head>
 <body>
+ 
 
-  <!-- Primary Page Layout
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <button id="testData">test</button>
-    <div class="firstBlock">
-      <h1 id="title">International Space Station Volcano Alert</h1>
-      <h5>When the I.S.S. passes directly overhead a volcano, an alert tweet is sent out to one of the astronauts on board.</h5>
-      <p>Check out the projects repository <a href="#">here</a> (to see the code behind it) or check out the alert bot's twitter account <a href="#">here</a>. <i class="fa-brands fa-twitter"></i></p>
+<h1>Hello!</h1>
 
-    
-    </div>
-    <div class="row secondBlock">
-      <div class="column">
-        <h4>Last volcano below the International Space Station:</h4>
-        <iframe id="mapIframe" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src='https://www.google.com/maps/embed/v1/view?key=AIzaSyDodhFFW3Wz6zw0c9TmzMMSdrsANKgBIEU&center=0,0&zoom=10&maptype=satellite'></iframe>
-        <button id="change">click</button>
-      </div>
-    </div>
-  </div>
+<h4>This API gathers data from an <a href="http://api.open-notify.org/">API</a> that tracks the ISS coordinates and generates volcano related data.</h4> 
+
+<h4>To get the data, go to https://iss-tweet-bot.herokuapp.com/data.json.</h4>
+
+<h3>JSON Data:</h3>
+<h4>latISS: The latitude of the ISS the last time it passed over a volcano</h4>
+<h4>longISS: The longitude of the ISS the last time it passed over a volcano</h4>
+<h4>volcanoLat: The latitude of the last volcano the ISS passed over</h4>
+<h4>volcanoLong: The longitude of the last volcano the ISS passed over</h4>
+<h4>volcanoName: The name of the last volcano the ISS passed over</h4>
+<h4>passedOverVolcanos: A current list of all volcanos the ISS has passed over, and the number of times it has been passed over</h4>
+<h4>top3: The most frequently passed over volcanos, and the times they have been passed over</h4>
 
 
-<script src="https://kit.fontawesome.com/bac08de2ab.js" crossorigin="anonymous"></script>
-<script type="text/javascript" src="secret.js"></script>
-<script type="text/javascript" src="main.js"></script>
-<!-- thank u mr skeltal -->
+<h5>Check out the <a href="https://iss-data.netlify.app/">project website</a></h5>
+<span><a href="https://volcano.si.edu/projects/vaac-data/">Volcano data used</a></span>
+
+
 </body>
 </html>
